--- a/app/views/cheam_croquet/links_to_croquet_site.html.erb
+++ b/app/views/cheam_croquet/links_to_croquet_site.html.erb
@@ -1,8 +1,11 @@
-<a href="http://www.croquet.org.uk/">Croquet Association's Homepage</a>
-<a href="http://www.croquet.org.uk/tournament/">Croquet Association's Event</a>
-<a href="http://www.southeastcroquet.org.uk/">SECF</a>
-<a href="http://www.thecroquetacademy.com/">Croquet Academy</a>
-<a href="">Croquet Equipment</a>
-<a href="http://cornwall-croquet.org.uk/croquet_glossary.htm">Croquet Glossary</a>
-<a href="http://www.w3schools.com/">Croquet Rules</a>
-<a href="http://www.w3schools.com/">Visit W3Schools</a>
+<h1> Links to Croquet Website </h1>
+<p><a href="http://www.croquet.org.uk/">Croquet Association's Homepage</a> </p>
+<p><a href="http://www.croquet.org.uk/tournament/">Croquet Association's Event</a> </p>
+<p><a href="http://www.southeastcroquet.org.uk/">SECF</a></p>
+<p><a href="http://www.thecroquetacademy.com/">Croquet Academy</a></p>
+<p><a href="http://cornwall-croquet.org.uk/croquet_glossary.htm">Croquet Glossary</a></p>
+<p><a href="http://www.oxfordcroquet.com/equip/">Whites</a></p>
+<p><a href="http://www.bowlsdirect.com/contact.htm">mallet,etc</a></p>
+<p><a href="http://www.w3schools.com/">Visit W3Schools</a></p>
+<p><a href="http://www.croquet.org.uk/association/laws.html">Golf Rule</a></p>
+<p><a href="http://www.croquet.org.uk/golf/laws/contents.htm">Association Rule</a></p>
