--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,6 +8,8 @@
     <li> <a> <%= link_to "How to get there" , how_to_get_there_path %> </a></li>
     <li> <a> <%= link_to "Links to Croquet sites" , links_to_croquet_site_path %> </a> </li>
      <li> <a> <%= link_to "Newsletter" , newsletter_path %> </a> </li>
+    <li> <a> <%= link_to "Club Matters" , club_matters_path %> </a> </li>
+     <li> <a> <%= link_to "What you need" , what_you_need_path %> </a> </li>
 
 	</ul>
 </nav>
